# zerOS

./: .clang-format  .gdb_history  .gitattributes  .gitignore  .gitmodules  .justfile  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GNUmakefile  LICENSE  Makefile.toml  Pipfile  README.md  ROADMAP.md  SECURITY.md  TODO.md  a-test.c.266r.expand  build  coroutine-transformation.cc  run  rustfmt.toml  test.c  test.sd.output  wscript  zerOS.code-workspace
generate-target/: Cargo.toml
generate-target/backup/: main.rs
generate-target/oldsrc/: main.rs
generate-target/src/: main.rs
macro-utils/: Cargo.toml
macro-utils/src/: lib.rs
proc-macro-utils/: Cargo.toml  build.rs
proc-macro-utils/backup/: lib.rs.bak
proc-macro-utils/src/: ctor.rs  lib.rs
proc-macro-utils/tests/: ctors.ld
unwindtool/: Cargo.toml
unwindtool/src/: main.rs  troll.rs
xtask/: Cargo.toml
xtask/src/: doc_comments.rs  env.rs  limine.rs  main.rs  requests-legacy.rs.todo  requests-new.rs.todo  requests.rs  term.rs
xtask/src/actions/: build.rs  clean.rs  clippy.rs  configure.rs  expand.rs  format.rs  mod.rs  run.rs
xtask/src/tools/: gentarget.rs  mk_iso.rs  mod.rs  objcopy.rs  strip.rs
zerOS/: .gdbinit  Cargo.toml  Cargo.toml.old  GNUmakefile  build.rs  build.rs.old  kconfig.toml  limine.cfg  linker-x86_64.ld  linker-x86_64.ld.template  rust-toolchain.toml
zerOS/.cargo/: config.toml
zerOS/buildrs-utils/: Cargo.toml
zerOS/buildrs-utils/src/: aliases.rs  cargo.rs  cc.rs  format.rs  lib.rs  linker.rs
zerOS/components/allocators/: Cargo.toml
zerOS/components/allocators/src/: lib.rs
zerOS/components/arch/: Cargo.toml  build.rs
zerOS/components/arch/src/: lib.rs
zerOS/components/bitfield/: Cargo.toml
zerOS/components/bitfield/src/: lib.rs
zerOS/components/constructors-macro/: Cargo.toml
zerOS/components/constructors-macro/src/: lib.rs  parse.rs
zerOS/components/ctors/: Cargo.toml
zerOS/components/ctors/src/: lib.rs
zerOS/components/entry-points/: Cargo.toml
zerOS/components/entry-points/src/: lib.rs
zerOS/components/error/: Cargo.toml
zerOS/components/error/src/: lib.rs
zerOS/components/global-allocator/: Cargo.toml
zerOS/components/hypervisors/: Cargo.toml
zerOS/components/io/: Cargo.toml
zerOS/components/io/src/: block.rs  impls.rs  lib.rs  port.rs  port.rs.old  text.rs  wrapper.rs
zerOS/components/kcmdline/: Cargo.toml
zerOS/components/kcmdline/src/: grammar.lalrpop  lex.rs  lib.rs  parse.rs
zerOS/components/kmain/: Cargo.toml
zerOS/components/linker/: Cargo.toml  build.rs
zerOS/components/linker/src/: lib.rs  section.rs
zerOS/components/llvm-intrinsics/: Cargo.toml
zerOS/components/llvm-intrinsics/src/: lib.rs
zerOS/components/logging/: Cargo.toml
zerOS/components/macro-utils/: Cargo.toml
zerOS/components/macro-utils/src/: lib.rs
zerOS/components/panic/: Cargo.toml
zerOS/components/proc-macro-utils/src/: lib.rs
zerOS/components/proc-macro-utils/tests/: test-array_size.rs  test-ctor.rs
zerOS/components/region-allocator/: Cargo.toml
zerOS/components/region-allocator/src/: lib.rs  region.c
zerOS/components/runnable/: Cargo.toml
zerOS/components/runnable/src/: lib.rs
zerOS/components/serial/: Cargo.toml
zerOS/components/serial/src/: lib.rs
zerOS/components/static-assertions/: Cargo.toml
zerOS/components/static-assertions/src/: lib.rs
zerOS/components/sync/: Cargo.toml
zerOS/components/sync/src/: lib.rs  mutex.rs  rwlock.rs
zerOS/components/unsafe-code/: Cargo.toml
zerOS/components/unsafe-code/src/: lib.rs
zerOS/components/unsafe-code/tests/: block.rs  func.rs
zerOS/components/unwinding/: Cargo.toml
zerOS/components/unwinding/unwinding-backup/: amd64.rs  mod.rs
zerOS/components/utils/: Cargo.toml
zerOS/components/utils/src/: aligned_buffer.rs  cmp.rs  constructor_trait.rs  lib.rs  lib.rs.bak  str.rs
zerOS/components/variant-names/: Cargo.toml
zerOS/components/variant-names/src/: lib.rs
zerOS/config/: limine.conf  lints.rs
zerOS/docs/: internals.tex
zerOS/docs/internals/: boot.tex  introduction.tex
zerOS/glue/libgrapheme/: config.mk
zerOS/glue/libgrapheme/src/: character.c
zerOS/gnumake/: default_kvars.mk  flags.mk  misc.mk  prerequisites.mk  printvar.mk
zerOS/include/: assert.h  config.h  config.h.in  config.sd  region_allocator.h  stddef.h  stdint.h  stdlib.h
zerOS/include/asm/: common.h  common.hh  common.inc  syntax.h
zerOS/include/asm/gas/: common.inc
zerOS/include/boot/: cpu.h  io.h  limine_setup.h  misc.h
zerOS/include/config.d/: ctypesize.sd  define.sd  int128.sd  variadics.sd
zerOS/include/kernel/: limine_data.h  printk.h  printk.hh  qemu.h  qemu.hh
zerOS/include/klibc/: alloca.h  assert.h  bitset.h  maybe.h  maybe.hh  misc.h  misc.hh  overload.h  setjmp.h  stdlib.h  stdlib.hh  string.h  string.hh
zerOS/include/machine/: dfdm.h  path.h  setup.hh
zerOS/include/misc/: array.h  array.hh  bits.h  func.hh  printf.hh  sections.h  statement.hh  symbol.h  type.hh  unique_ident.hh  units.h
zerOS/include/zerOS/: address.h  atomics.h  common.h  guard.h  platform.h  rbtree.h  region_allocator.h  spinlock.h
zerOS/iso_root/boot/: zerOS
zerOS/linker/: linker-x86_64.ld  linker-x86_64.ld.template
zerOS/llvm-targets/: riscv64-unknown-kernel.json  x86-64.json  x86-unknown-kernel.json  x86_64-unknown-kernel.json
zerOS/src/: error.rs  lib.rs  llvm.rs  logging.rs  main.rs  panic.rs
zerOS/src/arch/: mod.rs
zerOS/src/boot/: cpu.c  early_printk.c  early_printk.cc  io.c  limine.i  limine_requests.c  limine_requests.cc  limine_setup.c  misc.c  pagingvalues.c  pagingvalues.cc  pmm.c  post_limine_setup.c  post_limine_setup.cc  printk_convs.S  printk_convs.asm.dontcompile
zerOS/src/early/: mod.rs
zerOS/src/entry-point/: linker_output.rs  main.rs
zerOS/src/init/: ctors.rs  memory.rs  mod.rs
zerOS/src/kernel/: cpu.c  get_logo.c  get_logo.cc  hypervisor.rs  io.c  io.rs  kmain.c  kmain.cc  logging.rs  misc.c  mod.rs
zerOS/src/machine/: alderlake.c  mod.rs
zerOS/src/unwinding/: amd64.rs  mod.rs
zerOS/src/unwinding-backup/: x86.rs
zerOS/src/utils/: mod.rs  rbtree.c
(+185 files in other folders)
