[package]
name = "zerOS-macro-utils"
description = "A bunch of rust utility macros"
version = "0.1.0"
authors = [ "Axel PASCON <axelpascon@nullware.dev>" ]
edition = "2024"
homepage = "https://github.com/brvtalcake/zerOS"
repository = "https://github.com/brvtalcake/zerOS"
license-file = "../LICENSE"
readme = "../README.md"

autobins = false
autoexamples = false
autotests = false
autobenches = false

[lib]
name = "macro_utils"
proc-macro = false
doc = true
test = true

[dependencies]
lazy_static = { version = "1.5", features = [ "spin_no_std" ]}
zerOS-proc-macro-utils = { path = "../proc-macro-utils" }

[dev-dependencies]

#[target]

[build-dependencies]
cc = "1.2.18"
autocfg = "1.4.0"
bindgen = "0.71.1"
jobserver = "0.1.33"
cpp = "0.5.10"
cpp_build = "0.5.10"

[profile.dev]
opt-level = 0
debug = "full"
split-debuginfo = "off"
strip = "none"
debug-assertions = true
overflow-checks = true
lto = "off"
panic = "abort"
incremental = true
#codegen-units = 256
rpath = false

[profile.release]
opt-level = 3
debug = false
split-debuginfo = "packed"
strip = "none"
debug-assertions = false
overflow-checks = false
lto = false
panic = "abort"
incremental = false
#codegen-units = 16
rpath = false

[profile.release-lto]
inherits = "release"
lto = true

[profile.dev-lto]
inherits = "dev"
lto = true
incremental = false