[package]
name = "zerOS-proc-macro-utils"
description = "A bunch of rust utility proc macros"
version = "0.1.0"
authors = [ "Axel PASCON <axelpascon@nullware.dev>" ]
edition = "2024"
homepage = "https://github.com/brvtalcake/zerOS"
repository = "https://github.com/brvtalcake/zerOS"
license-file = "../LICENSE"
readme = "../README.md"

autobins = false
autoexamples = false
autotests = false
autobenches = false

[lib]
name = "proc_macro_utils"
proc-macro = true
doc = true
test = true

[[test]]
name = "test-array_size"

[[test]]
name = "test-ctor"

[dependencies]
proc-macro2 = "1.0.94"
quote = "*"
syn = { version = "2.0", features = [ "full", "parsing", "extra-traits" ] }
getrandom = "*"
paste = "*"
either = "*"
num-traits = "*"
#darling = { version = "0.20", features = ["diagnostics", "suggestions"]}
pathsearch = "*"
heck = "0.5"

[dev-dependencies]
libc = "*"

#[target]

[build-dependencies]
cc = "1.2.18"
autocfg = "1.4.0"
bindgen = "0.72.0"
jobserver = "0.1.33"
cpp = "0.5.10"
cpp_build = "0.5.10"

