[package]
name = "unwindtool"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
anyhow = "*"
strum = {version = "*", features = ["derive"]}
lazy_static = "*"
gimli = "0.31.1"
object = { version = "0.37.0", features = ["all"] }
rustc-demangle = { version = "0.1.24", features = ["std"] }
symbolic-demangle = "12.15.5"

[dependencies.bitflags]
version = "*"
features = ["std", "serde"]
#rustc_target = "0"
