cargo-features = ["profile-rustflags", "per-package-target"]

[package]
name = "xtask"
edition = "2024"
#forced-target = "x86_64-unknown-linux"

#[target.'cfg(target_os = "linux")'.package]

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
rustflags = ["-C", "target-cpu=native", "-Z", "macro-backtrace", "--cfg", "reqwest_unstable"]

[profile.dev]
rustflags = ["-C", "target-cpu=native", "-Z", "macro-backtrace", "--cfg", "reqwest_unstable"]

[dependencies]
tokio = { version = "1.45", features = ["full"] }
anyhow = { version = "1.0.98", features = ["backtrace"] }
async-compat = "0.2.4"
camino = { version = "1.1.10", features = ["serde", "serde1"] }
clap = { version = "4.5.40", features = [
    "default",
    "derive",
    "env",
    "string",
    "unicode",
    "wrap_help",
] }
colog = "1.3.0"
dirs = "6.0.0"
eager2 = "1.0.1"
#fs4 = { version = "0.13.1", features = ["smol"] }
#futures = { version = "0.3.31", features = ["futures-executor", "unstable", "thread-pool"] }
itertools = "0.14.0"
log = { version = "0.4.27", features = ["kv_unstable_std"] }
num_cpus = "1.17.0"
phf = { version = "0.12.1", features = ["std", "macros"] }
regex = { version = "1.11.1", features = ["unstable", "perf-dfa-full"] }
rmp = "0.8.14"
rmp-serde = "1.3.0"
scopeguard = "1.2.0"
serde = { version = "1.0.219", features = [
    "default",
    "alloc",
    "derive",
    "rc",
    "unstable",
] }
serde_with = "3.13.0"
#smol = "2.0.2"
#smol-macros = "0.1.1"
strum = { version = "0.27.1", features = ["derive", "phf", "std"] }
tempfile = { version = "3.20.0", features = ["nightly"] }
toml = "0.8.23"
which = { version = "8.0.0", features = ["regex"] }
octocrab = "0.44.1"
versions = { version = "7.0.0", features = ["serde"] }
remain = "0.2.15"
fmmap = { version = "0.4.0", features = ["nightly", "tokio"] }
url = { version = "2.5.4", features = ["serde"] }
futures = "0.3.31"
http = "1.3.1"
hyper = { version = "1.6.0", features = ["client", "http1", "http2", "nightly"] }
tower = { version = "0.5.2", features = ["full", "tokio", "tokio-stream"] }
hyper-util = { version = "0.1.14", features = ["client", "client-legacy", "service", "http1", "http2", "tokio"] }
http-body-util = { version = "0.1.3", features = ["full"] }
async-ringbuf = "0.3.4"
ringbuf = "0.4.8"
http-body = "1.0.1"
reqwest = { version = "0.12.20", features = ["http3", "zstd", "brotli", "deflate", "gzip", "json", "native-tls", "socks", "stream"] }
tower-http = { version = "0.6.6", features = ["full"] }
