cargo-features = ["different-binary-name", "profile-rustflags"]

[package]
name = "zerOS-kernel"
description = "The zerOS kernel"
version = "0.1.0"
authors = ["Axel PASCON <axelpascon@nullware.dev>"]
edition = "2024"
homepage = "https://github.com/brvtalcake/zerOS"
repository = "https://github.com/brvtalcake/zerOS"
license-file = "../LICENSE"
readme = "../README.md"

autobins = false
autoexamples = false
autotests = false
autobenches = false

#[lib]
#name = "zerOS"
#crate-type = [ "rlib", "staticlib" ]
#doc = true

[[bin]]
name = "zerOS"
filename = "zerOS"
path = "./src/main.rs"
doc = true

#[features]
#default = ["limine-bootloader"]
#limine-bootloader = []
#grub2-bootloader = []
#uefi-bootloader = []

[dependencies]
overloadable = "0.4"
cfg-if = "1"
fastdivide = "0.4.2"
bitflags = "2.9"
itertools = { version = "0.14", default-features = false }
hashbrown = "0.15"
itoa = "1.0"
ryu = "1.0"
scopeguard = { version = "1.2", default-features = false }
cpufeatures = "0.2"
memoffset = "0.9"
getrandom = "0.3"
time = { version = "0.3", default-features = false }
zerocopy = { version = "0.8", default-features = false, features = ["derive"] }
x86 = "0.52.0"
compiler_builtins = "*"
paste = "1.0.15"
#static_assertions = "1.1.0"
bytemuck = "1.23.0"
bitfrob = "1.3.2"
lru = "0.14.0"
raw-cpuid = "11.5.0"
#ctor_bare = "0.2.1"
goblin = { version = "0.10", default-features = false }
gimli = { version = "0.32", default-features = false, features = ["read"] }
either = { version = "1.15.0", default-features = false }
lazy_static = { version = "1.5", features = ["spin_no_std"] }
multiboot2 = "0.24"
strum = { version = "0.27", default-features = false, features = [
    "derive",
    #"phf",
] }
bincode = { version = "2.0.1", default-features = false, features = ["derive"] }
intrusive-collections = { version = "0.9", features = ["alloc", "nightly"] }
strength_reduce = "0.2.4"
#bitfield = "0.19"
x86_64 = "0.15"
zerOS-proc-macro-utils = { path = "../proc-macro-utils" }
zerOS-macro-utils = { path = "../macro-utils" }
#overloadf = "0.1.8"
overloadf = { git = "https://github.com/brvtalcake/overloadf.git", branch = "public-overloads" }
#critical-section = { version = "1.2", default-features = false }
lock_api = { version = "0.4", features = ["nightly", "serde"] }
#backtrace = { version = "0.3", default-features = false }
anyhow = { version = "1.0", default-features = false }
#bitfield-struct = "0.10.1"
anstyle = { version = "1.0.10", default-features = false }
downcast-rs = { version = "2.0.1", default-features = false }
psm = "0.1"
logos = { version = "0.15.0", default-features = false, features = [
    "export_derive",
] }
indexmap = { version = "2.10.0", default-features = false }
corosensei = { version = "0.2.1", default-features = false }
futures = { version = "0.3", default-features = false }
eager2 = "1.0.1"
unicode-normalization = { version = "0.1.24", default-features = false }
fontdue = "0.9.3"
bumpalo = { version = "3", features = ["allocator_api", "boxed"] }
object = { version = "0.37.0", default-features = false, features = ["read"] }
fallible-iterator = { version = "0.3.0", default-features = false, features = [
    "alloc",
] }
impls = "1.0.3"
addr2line = { version = "0.25.0", default-features = false, features = ["rustc-demangle", "cpp_demangle", "fallible-iterator", "smallvec"] }
tagptr = "0.2.0"
chumsky = { version = "0.10.1", default-features = false, features = [
    "lexical-numbers",
    "memoization",
    "nightly",
    "sync",
    "pratt",
] }
lalrpop-util = { version = "0.22.2", default-features = false }
unicase = { version = "2.8.1", default-features = false }
phf = { version = "0.12.1", default-features = false, features = ["macros", "unicase"] }
thiserror = { version = "2.0.12", default-features = false }
#uuid-simd = { version = "0.8.0", default-features = false, features = ["uuid", "alloc", "unstable"] }
#uuid-simd = { version = "0.8.0", default-features = false, features = ["alloc", "unstable"] }
#base64-simd = { version = "0.8.0", default-features = false, features = ["alloc", "unstable"] }
wide = { version = "0.7.32", default-features = false }
flexpect = "0.1.1"
simdutf8 = { version = "0.1.5", default-features = false, features = [
    "aarch64_neon",
    "aarch64_neon_prefetch",
    "hints",
    "public_imp",
] }
aho-corasick = { version = "1.1.3", default-features = false, features = [
    "perf-literal",
    "logging",
] }
regex-automata = { version = "0.4.9", default-features = false, features = [
    "alloc",
    "syntax",
    "perf-inline",
    "perf-literal-substring",
    "unicode",
    "meta",
    "nfa",
    "dfa",
    "hybrid",
    "logging",
] }
regex = { version = "1.11.1", default-features = false, features = [
    "unstable",
    "unicode",
    "logging",
    "perf-dfa-full",
    "pattern",
    "perf-cache",
    "perf-dfa",
    "perf-onepass",
    "perf-backtrack",
    "perf-inline",
] }
bstr = { version = "1.12.0", default-features = false, features = [
    "unicode",
    "alloc",
    "serde",
] }
castaway = { version = "0.2.3", default-features = false, features = ["alloc"] }
num = { version = "0.4.3", default-features = false, features = [
    "alloc",
    "libm",
    "rand",
    "serde",
    "num-bigint",
] }
remain = "0.2.15"
limine = { version = "0.5.0", features = ["ipaddr", "uuid"] }
#sharded-slab = "0.1.7"

[dependencies.log]
version = "0.4.27"
features = ["kv"]

[dependencies.uuid]
version = "1.16"
default-features = false
features = ["rng-getrandom", "v1", "v3", "v4", "v5", "v6", "v7", "v8"]

[dependencies.rustc-demangle]
version = "0.1.16"
default-features = false

[dependencies.libm]
version = "0.2"
default-features = false
features = ["force-soft-floats", "unstable"]

[dependencies.serde]
version = "1.0"
default-features = false
features = ["derive", "unstable"]

[dependencies.byteorder]
version = "*"
default-features = false
features = ["i128"]

[dependencies.rmp]
version = "0.8"
default-features = false

#[dependencies.defmt]
#version = "1.0"
#default-features = false

[dependencies.postcard]
version = "1.1"
default-features = false
#features = ["use-crc", "use-defmt", "experimental-derive", "heapless"]
features = ["use-crc", "experimental-derive", "heapless"]

[dependencies.heapless]
version = "0.8"
default-features = false
features = ["portable-atomic-critical-section"]

[dependencies.portable-atomic]
version = "1.11"
features = ["critical-section"]

#[dependencies.unwinding]
#version = "0"
#default-features = false
#features = [
#    "unwinder",
#    "fde-static",
#    "personality",
#    "panic",
#    "dwarf-expr",
#    "hide-trace",
#]

# TODO: maybe framehop or mini-backtrace ?

[dev-dependencies]

#[target]

[build-dependencies]
bindgen = "0.72"
cc = "1.2.18"
toml = "*"
strum = { version = "0.27", default-features = true, features = ["derive"] }
serde = { version = "*", default-features = true, features = ["derive"] }
autocfg = "1.4.0"
#cbindgen = "0.28.0"
#jobserver = "0.1.33"
#cpp = "0.5.10"
#cpp_build = "0.5.10"
cfg_aliases = "0"

zerOS-proc-macro-utils = { path = "../proc-macro-utils" }
zerOS-macro-utils = { path = "../macro-utils" }
lalrpop = "0.22.2"
regex = { version = "1.11.1", features = [
    "logging",
    "unstable",
    "pattern",
    "perf-dfa-full",
] }

[profile.dev]
#rustflags = [--cfg getrandom_backend="rdrand", "-C" , "force-unwind-tables", "-Z", "macro-backtrace"]
opt-level = 0
debug = "full"
split-debuginfo = "off"
strip = "none"
debug-assertions = true
overflow-checks = true
lto = "off"
panic = "abort"
incremental = true
#codegen-units = 256
rpath = false

[profile.release]
#rustflags = [--cfg getrandom_backend="rdrand", "-C" , "force-unwind-tables", "-Z", "macro-backtrace"]
opt-level = 3
debug = "full"
# split-debuginfo = "packed"
split-debuginfo = "off"
# TODO: strip manually
strip = "none"
debug-assertions = false
overflow-checks = false
lto = false
panic = "abort"
incremental = false
rpath = false

[profile.release-lto]
inherits = "release"
lto = "fat"
codegen-units = 1

[profile.dev-lto]
inherits = "dev"
lto = "fat"
incremental = false
