cargo-features = ["different-binary-name", "profile-rustflags"]

[workspace]
members = ["components/*"]
default-members = ["components/*"]
resolver = "3"
package.version = "0.1.0"
package.authors = ["Axel PASCON <axelpascon@nullware.dev>"]
package.edition = "2024"
package.homepage = "https://github.com/brvtalcake/zerOS"
package.repository = "https://github.com/brvtalcake/zerOS"
package.license-file = "../LICENSE"
package.readme = "../README.md"

[workspace.dependencies]
crabtime = { git = "https://github.com/wdanilo/crabtime", branch = "main" }

[package]
name = "zerOS-kernel"
description = "The zerOS kernel"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license-file.workspace = true
readme.workspace = true

autobins = false
autoexamples = false
autotests = false
autobenches = false

#[lib]
#name = "zerOS"
#crate-type = [ "rlib", "staticlib" ]
#doc = true

[[bin]]
name = "zerOS"
filename = "zerOS"
path = "./src/main.rs"
doc = true
harness = false

[dependencies]
zerOS-global-allocator = { path = "components/global-allocator" }
zerOS-proc-macro-utils = { path = "components/proc-macro-utils" }
zerOS-hypervisors = { path = "components/hypervisors" }
zerOS-linker = { path = "components/linker" }
zerOS-kmain = { path = "components/kmain" }
zerOS-arch = { path = "components/arch" }
zerOS-utils = { path = "components/utils" }
zerOS-unwinding = { path = "components/unwinding" }
zerOS-macro-utils = { path = "components/macro-utils" }
zerOS-allocators = { path = "components/allocators" }
zerOS-ctors = { path = "components/ctors" }
zerOS-entry-points = { path = "components/entry-points" }
zerOS-llvm-intrinsics = { path = "components/llvm-intrinsics" }
zerOS-region-allocator = { path = "components/region-allocator" }
zerOS-serial = { path = "components/serial" }
zerOS-io = { path = "components/io" }
zerOS-error = { path = "components/error" }
zerOS-panic = { path = "components/panic" }
zerOS-sync = { path = "components/sync" }
zerOS-kcmdline = { path = "components/kcmdline" }
zerOS-logging = { path = "components/logging" }

[profile.dev]
#rustflags = [--cfg getrandom_backend="rdrand", "-C" , "force-unwind-tables", "-Z", "macro-backtrace"]
opt-level = 0
debug = "full"
split-debuginfo = "off"
strip = "none"
debug-assertions = true
overflow-checks = true
lto = "off"
panic = "abort"
incremental = true
#codegen-units = 256
rpath = false

[profile.release]
#rustflags = [--cfg getrandom_backend="rdrand", "-C" , "force-unwind-tables", "-Z", "macro-backtrace"]
opt-level = 3
debug = "full"
# split-debuginfo = "packed"
split-debuginfo = "off"
# TODO: strip manually
strip = "none"
debug-assertions = false
overflow-checks = false
lto = false
panic = "abort"
incremental = false
rpath = false

[profile.release-lto]
inherits = "release"
lto = "fat"
codegen-units = 1

[profile.dev-lto]
inherits = "dev"
lto = "fat"
incremental = false

[features]
default = ["arch-amd64", "bootloader-limine"]

arch-amd64 = ["zerOS-arch/amd64"]
arch-x86 = ["zerOS-arch/x86"]
arch-aarch64 = ["zerOS-arch/aarch64"]
arch-arm32 = ["zerOS-arch/arm32"]
arch-riscv64 = ["zerOS-arch/riscv64"]
arch-riscv32 = ["zerOS-arch/riscv32"]
arch-ppc64 = ["zerOS-arch/ppc64"]
arch-ppc32 = ["zerOS-arch/ppc32"]
arch-mips64 = ["zerOS-arch/mips64"]
arch-mips32 = ["zerOS-arch/mips32"]
arch-sparc64 = ["zerOS-arch/sparc64"]
arch-sparc32 = ["zerOS-arch/sparc32"]
arch-loongarch64 = ["zerOS-arch/loongarch64"]
arch-avr32 = ["zerOS-arch/avr32"]
arch-zarch = ["zerOS-arch/zarch"]
bootloader-limine = ["zerOS-entry-points/limine"]
bootloader-grub2 = ["zerOS-entry-points/grub2"]
bootloader-uefi = ["zerOS-entry-points/uefi"]
