cargo-features = ["different-binary-name", "profile-rustflags"]

[workspace]
members = ["components/*"]
exclude = ["buildrs-utils", "lintcfg"]
default-members = ["components/*"]
resolver = "3"
package.version = "0.1.0"
package.authors = ["Axel PASCON <axelpascon@nullware.dev>"]
package.edition = "2024"
package.homepage = "https://github.com/brvtalcake/zerOS"
package.repository = "https://github.com/brvtalcake/zerOS"
package.license-file = "../LICENSE"
package.readme = "../README.md"

[workspace.dependencies]
crabtime = { git = "https://github.com/wdanilo/crabtime", branch = "main" }
overloadf = { git = "https://github.com/brvtalcake/overloadf.git", branch = "public-overloads" }
eager2 = { git = "https://github.com/brvtalcake/eager2.git", branch = "master" }
contracts = "0.6.6"

[package]
name = "zerOS-kernel"
description = "The zerOS kernel"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license-file.workspace = true
readme.workspace = true

autobins = false
autoexamples = false
autotests = false
autobenches = false

#[lib]
#name = "zerOS"
#crate-type = [ "rlib", "staticlib" ]
#doc = true

[[bin]]
name = "zerOS"
filename = "zerOS"
path = "./src/main.rs"
doc = true
harness = false

#[build-dependencies]
#lintcfg = { path = "./lintcfg" }

[dependencies]
zerOS-global-allocator = { path = "components/global-allocator" }
zerOS-proc-macro-utils = { path = "components/proc-macro-utils" }
zerOS-hypervisors = { path = "components/hypervisors" }
zerOS-linker = { path = "components/linker" }
zerOS-kmain = { path = "components/kmain" }
zerOS-arch = { path = "components/arch" }
zerOS-utils = { path = "components/utils" }
zerOS-unwinding = { path = "components/unwinding" }
zerOS-macro-utils = { path = "components/macro-utils" }
zerOS-allocators = { path = "components/allocators" }
zerOS-ctors = { path = "components/ctors" }
zerOS-entry-points = { path = "components/entry-points" }
zerOS-llvm-intrinsics = { path = "components/llvm-intrinsics" }
zerOS-region-allocator = { path = "components/region-allocator" }
zerOS-serial = { path = "components/serial" }
zerOS-io = { path = "components/io" }
zerOS-error = { path = "components/error" }
zerOS-panic = { path = "components/panic" }
zerOS-sync = { path = "components/sync" }
zerOS-kcmdline = { path = "components/kcmdline" }
zerOS-logging = { path = "components/logging" }
zerOS-unsafe-code = { path = "components/unsafe-code" }

[profile.dev]
#rustflags = [--cfg getrandom_backend="rdrand", "-C" , "force-unwind-tables", "-Z", "macro-backtrace"]
opt-level = 0
debug = "full"
split-debuginfo = "off"
strip = "none"
debug-assertions = true
overflow-checks = true
lto = "off"
panic = "abort"
incremental = true
#codegen-units = 256
rpath = false

[profile.release]
#rustflags = [--cfg getrandom_backend="rdrand", "-C" , "force-unwind-tables", "-Z", "macro-backtrace"]
opt-level = 3
debug = "full"
# split-debuginfo = "packed"
split-debuginfo = "off"
# TODO: strip manually
strip = "none"
debug-assertions = false
overflow-checks = false
lto = false
panic = "abort"
incremental = false
rpath = false

[profile.release-lto]
inherits = "release"
lto = "fat"
codegen-units = 1

[profile.dev-lto]
inherits = "dev"
lto = "fat"
incremental = false

[features]
default = ["arch-amd64", "bootloader-limine"]

arch-amd64 = ["zerOS-arch/amd64"]
arch-x86 = ["zerOS-arch/x86"]
arch-aarch64 = ["zerOS-arch/aarch64"]
arch-arm32 = ["zerOS-arch/arm32"]
arch-riscv64 = ["zerOS-arch/riscv64"]
arch-riscv32 = ["zerOS-arch/riscv32"]
arch-ppc64 = ["zerOS-arch/ppc64"]
arch-ppc32 = ["zerOS-arch/ppc32"]
arch-mips64 = ["zerOS-arch/mips64"]
arch-mips32 = ["zerOS-arch/mips32"]
arch-sparc64 = ["zerOS-arch/sparc64"]
arch-sparc32 = ["zerOS-arch/sparc32"]
arch-loongarch64 = ["zerOS-arch/loongarch64"]
arch-avr32 = ["zerOS-arch/avr32"]
arch-zarch = ["zerOS-arch/zarch"]
bootloader-limine = ["zerOS-entry-points/limine"]
bootloader-grub2 = ["zerOS-entry-points/grub2"]
bootloader-uefi = ["zerOS-entry-points/uefi"]

[workspace.lints.rust]
# FORBID
missing_unsafe_on_extern = "forbid"  # hard error in the future anyways
unused_import_braces = "forbid"
renamed_and_removed_lints = "forbid"

# DENY
# allow by default
missing_copy_implementations = "deny"
missing_debug_implementations = "deny"
lossy_provenance_casts = "deny"
fuzzy_provenance_casts = "deny"
elided_lifetimes_in_paths = "deny"
impl_trait_overcaptures = "deny"
impl_trait_redundant_captures = "deny"
let_underscore_drop = "deny"
linker_messages = "deny"
meta_variable_misuse = "deny"
multiple_supertrait_upcastable = "deny"
must_not_suspend = "deny"
non_exhaustive_omitted_patterns = "deny"
redundant_lifetimes = "deny"
single_use_lifetimes = "deny"
trivial_numeric_casts = "deny"
unit_bindings = "deny"
unqualified_local_imports = "deny"
# deny without proper justification (use `zerOS_macro_utils::dangerous! { ... }` instead)
unsafe_code = "deny"
unsafe_op_in_unsafe_fn = "deny"
unused_extern_crates = "deny"
unused_lifetimes = "deny"
# warn by default
aarch64_softfloat_neon = "deny"
ambiguous_glob_imports = "deny"
ambiguous_glob_reexports = "deny"
ambiguous_wide_pointer_comparisons = "deny"
anonymous_parameters = "deny"
array_into_iter = "deny"
asm_sub_register = "deny"
async_fn_in_trait = "deny"
bad_asm_style = "deny"
bare_trait_objects = "deny"
boxed_slice_into_iter = "deny"
break_with_label_and_loop = "deny"
clashing_extern_declarations = "deny"
coherence_leak_check = "deny"
confusable_idents = "deny"
const_evaluatable_unchecked = "deny"
const_item_mutation = "deny"
dangling_pointers_from_temporaries = "deny"
dead_code = "deny"
dependency_on_unit_never_type_fallback = "deny"
deprecated = "deny"
deprecated_where_clause_location = "deny"
deref_nullptr = "deny"
double_negations = "deny"
dropping_copy_types = "deny"
dropping_references = "deny"
drop_bounds = "deny"
duplicate_macro_attributes = "deny"
dyn_drop = "deny"
ellipsis_inclusive_range_patterns = "deny"
exported_private_dependencies = "deny"
forbidden_lint_groups = "deny"
forgetting_copy_types = "deny"
forgetting_references = "deny"
for_loops_over_fallibles = "deny"
function_item_references = "deny"
hidden_glob_reexports = "deny"
improper_ctypes = "deny"
improper_ctypes_definitions = "deny"
inline_no_sanitize = "deny"
internal_features = "deny"
invalid_from_utf8 = "deny"
invalid_macro_export_arguments = "deny"
invalid_nan_comparisons = "deny"
invalid_value = "deny"
irrefutable_let_patterns = "deny"
large_assignments = "deny"
late_bound_lifetime_arguments = "deny"
legacy_derive_helpers = "deny"
map_unit_fn = "deny"
mismatched_lifetime_syntaxes = "deny"
missing_abi = "deny"
mixed_script_confusables = "deny"
named_arguments_used_positionally = "deny"
never_type_fallback_flowing_into_unsafe = "deny"
non_contiguous_range_endpoints = "deny"
non_fmt_panics = "deny"
non_local_definitions = "deny"
non_shorthand_field_patterns = "deny"
noop_method_call = "deny"
no_mangle_generic_items = "deny"
opaque_hidden_inferred_bound = "deny"
out_of_scope_macro_calls = "deny"
overlapping_range_endpoints = "deny"
path_statements = "deny"
private_bounds = "deny"
private_interfaces = "deny"
ptr_to_integer_transmute_in_consts = "deny"
redundant_semicolons = "deny"
refining_impl_trait_internal = "deny"
refining_impl_trait_reachable = "deny"
repr_transparent_external_private_fields = "deny"
self_constructor_from_outer_item = "deny"
semicolon_in_expressions_from_macros = "deny"
special_module_name = "deny"
stable_features = "deny"
static_mut_refs = "deny"
suspicious_double_ref_op = "deny"
trivial_bounds = "deny"
type_alias_bounds = "deny"
tyvar_behind_raw_pointer = "deny"
unconditional_recursion = "deny"
uncovered_param_in_projection = "deny"
unexpected_cfgs = "deny"
unfulfilled_lint_expectations = "deny"
ungated_async_fn_track_caller = "deny"
uninhabited_static = "deny"
unknown_lints = "deny"
unknown_or_malformed_diagnostic_attributes = "deny"
unnameable_test_items = "deny"
unnecessary_transmutes = "deny"
unpredictable_function_pointer_comparisons = "deny"
unreachable_code = "deny"
unreachable_patterns = "deny"
unstable_name_collisions = "deny"
unstable_syntax_pre_expansion = "deny"
unsupported_fn_ptr_calling_conventions = "deny"
unused_allocation = "deny"
unused_assignments = "deny"
unused_associated_type_bounds = "deny"
unused_attributes = "deny"
unused_braces = "deny"
unused_comparisons = "deny"
unused_doc_comments = "deny"
unused_features = "deny"
unused_imports = "deny"
unused_labels = "deny"
unused_macros = "deny"
unused_must_use = "deny"
unused_mut = "deny"
unused_parens = "deny"
unused_unsafe = "deny"
unused_variables = "deny"
useless_ptr_null_checks = "deny"
uses_power_alignment = "deny"
while_true = "deny"

# WARN
# allow by default
explicit_outlives_requirements = "warn" # can cause false positives
if_let_rescope = "warn"                 # not that important
redundant_imports = "warn"
unnameable_types = "warn"
unreachable_pub = "warn"
unsafe_attr_outside_unsafe = "warn"
unused_crate_dependencies = "warn"
unused_macro_rules = "warn"
unused_qualifications = "warn"
variant_size_differences = "warn"
# warn by default
incomplete_features = "warn"
non_camel_case_types = "warn"
non_snake_case = "warn"
non_upper_case_globals = "warn"

# ALLOW
# warn by default
refining_impl_trait = "allow"
uncommon_codepoints = "allow"
