[package]
name = "zerOS-buildrs-utils"
edition = "2024"

[lib]
name = "zerOS_buildrs_utils"

[dependencies]
cfg_aliases = "0.2.1"
#bindgen = "0.72"
#cc = "1.2.18"
#toml = "*"
#strum = { version = "0.27", default-features = true, features = ["derive"] }
#serde = { version = "*", default-features = true, features = ["derive"] }
#autocfg = "1.4.0"
#cbindgen = "0.28.0"
#jobserver = "0.1.33"
#cpp = "0.5.10"
#cpp_build = "0.5.10"
#zerOS-proc-macro-utils = { path = "../proc-macro-utils" }
#zerOS-macro-utils = { path = "../macro-utils" }
lalrpop = "0.22.2"
regex = { version = "1.11.1", features = [
    "logging",
    "unstable",
    "pattern",
    "perf-dfa-full",
] }