[package]
name = "zerOS-bitfield"
description = "bitfield! macro"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license-file.workspace = true
readme.workspace = true

autobins = false
autoexamples = false
autotests = false
autobenches = false

[lib]
name = "zerOS_bitfield"
proc-macro = true

[dependencies]
proc-macro2 = "1.0.94"
quote = "1.0.40"
syn = { version = "2.0", features = ["full", "parsing", "extra-traits"] }
num-traits = "0.2.19"
getrandom = "0.3.3"