[package]
name = "zerOS-constructors-macro"
description = "crate for `zerOS_constructors::constructors!` proc-macro"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license-file.workspace = true
readme.workspace = true

autobins = false
autoexamples = false
autotests = false
autobenches = false

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.94"
quote = "1.0.40"
syn = { version = "2.0", features = ["full", "parsing", "extra-traits"] }
proc-macro-error2 = { version = "2.0.1", features = ["nightly"] }
eager2.workspace = true
