[package]
name = "zerOS-ctors"
description = "Facilities to register constructors to be run on kernel initialization"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license-file.workspace = true
readme.workspace = true

autobins = false
autoexamples = false
autotests = false
autobenches = false

[lib]
name = "zerOS_ctors"
crate-type = ["rlib"]

[dependencies]
overloadf = { git = "https://github.com/brvtalcake/overloadf.git", branch = "public-overloads" }
