[package]
name = "zerOS-global-allocator"
description = "zerOS global (and main) allocator"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license-file.workspace = true
readme.workspace = true

autobins = false
autoexamples = false
autotests = false
autobenches = false

[lib]
name = "zerOS_global_allocator"
crate-type = ["rlib"]