[package]
name = "zerOS-io"
description = "zerOS input/output related code"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license-file.workspace = true
readme.workspace = true

autobins = false
autoexamples = false
autotests = false
autobenches = false

[lib]
name = "zerOS_io"
crate-type = ["rlib"]
harness = false

[dependencies]
zerOS-macro-utils = { path = "../macro-utils" }
zerOS-utils = { path = "../utils" }
bstr = { version = "1.12.0", default-features = false, features = ["alloc", "serde"] }
unicode-normalization = { version = "0.1.24", default-features = false }
sealed = "0.6.0"
