[package]
name = "zerOS-io"
description = "zerOS input/output related code"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license-file.workspace = true
readme.workspace = true

autobins = false
autoexamples = false
autotests = false
autobenches = false

[lib]
name = "zerOS_io"
crate-type = ["rlib"]
harness = false

[dependencies]
zerOS-macro-utils = { path = "../macro-utils" }
zerOS-static-assertions = { path = "../static-assertions" }
zerOS-utils = { path = "../utils" }
zerOS-sync = { path = "../sync" }
bstr = { version = "1.12.0", default-features = false, features = [
    "alloc",
    "serde",
] }
unicode-normalization = { version = "0.1.24", default-features = false }
sealed = "0.6.0"
eager2.workspace = true
typenum = { version = "1.18.0", features = ["const-generics"] }
crabtime.workspace = true
downcast-rs = { version = "2.0.1", default-features = false, features = [
    "sync",
] }
impls = "1.0.3"
delegate = "0.13.3"
num = { version = "0.4.3", default-features = false, features = ["alloc"] }
zerocopy = "0.8.26"
thiserror = { version = "2.0.12", default-features = false }
anyhow = { version = "1.0.98", default-features = false }
overloadf.workspace = true
regex = { version = "1.11.1", default-features = false, features = [
    "unstable",
    "unicode",
    "logging",
    "perf-dfa-full",
    "pattern",
    "perf-cache",
    "perf-dfa",
    "perf-onepass",
    "perf-backtrack",
    "perf-inline",
] }
derive-where = { version = "1.5.0", default-features = false, features = ["nightly"] }
stable_deref_trait = { version = "1.2.0", default-features = false, features = ["alloc"] }
